src/objects/ItemChangeHistory__c.object
<CustomObject>
    <fields>
        <fullName>AccountAcountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計</label>
        <referenceTo>AccountAcount__c</referenceTo>
        <relationshipLabel>項目変更履歴</relationshipLabel>
        <relationshipName>ItemAccountAcountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CashVerificationRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>現金合せ</label>
        <referenceTo>CashVerification__c</referenceTo>
        <relationshipName>CashVerificationRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>History__c</fullName>
        <label>変更履歴</label>
        <length>10240</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>変更者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedTime__c</fullName>
        <label>変更日付</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalId>true</externalId>
        <label>参照先ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>項目変更履歴</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HIS-{000000000}</displayFormat>
        <label>変更番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>